--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Sammi Zhu</h1>
-      <p>I'm <span class="typed" data-typed-items="a Harvard sophomore, a CS enthusiast, passionate about making CS accessible for every student \^_^/"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Harvard sophomore, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
