--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Sammi Zhu</h1>
-      <p>I'm <span class="typed" data-typed-items="a Harvard sophomore, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Harvard student, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -73,8 +73,13 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Get To Know Me</h2>
+          <p>
+            I'm a Harvard student passionate about making CS accessible for all students. 
+            As a First-Generation Low Income student and CS enthusiast, I have seen the 
+            barriers FGLI students face when it comes to learning CS, as well as the benefits 
+            that comes with learning CS. 
+          </p>
         </div>
 
         <div class="row">
@@ -82,33 +87,28 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Education</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Harvard Class of 2025 - A.B. Candidate in Computer Science w/ secondary in Statistics
             </p>
             <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
+                      <span>Discrete Mathematics for Computer Science, Calculus II, Calculus I, and Introduction to Computer Science (CS50)</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Present Courses: </strong> 
+                      <span>Intro to Probability, Applied Math: Solving and Optimizing, 
+                        and Intro to Algorithms and their Limitations</span></li>
+              </ul>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            <p class="fst-italic">
+              University of Michigan (Summer 2022) - Coursera Courses
             </p>
+            <div class="row">
+              <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
+                      <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) and Intro to Data Science in Python</span></li>
+              </ul>
+            </div>
           </div>
         </div>
 
