--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experiences</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -106,7 +106,8 @@
             <div class="row">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
-                      <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) and Intro to Data Science in Python</span></li>
+                      <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) 
+                        and Intro to Data Science in Python</span></li>
               </ul>
             </div>
           </div>
@@ -229,74 +230,8 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+     <!-- ======= Portfolio Section ======= -->
+     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -448,19 +383,104 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Resume</h2>
+          <p>
+            Below is a compliation of my experiences and leadership activities from the past year. Please feel free to reach out if you are a 
+            recuriter needing more information.
+          </p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Harvard University. Cambridge, MA</h4>
+              <h5>2021 - 2025</h5>
+              <p><em>A.B. Candidate in Computer Science w/ Secondary in Statistics</em></p>
+              <ul>
+                <i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
+                      <span>Discrete Mathematics for Computer Science, Calculus II, Calculus I, and Introduction to Computer Science (CS50)</span></br>
+                <i class="bi bi-chevron-right"></i> <strong>Present Courses: </strong> 
+                      <span>Intro to Probability, Applied Math: Solving and Optimizing, 
+                        and Intro to Algorithms and their Limitations</span>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Univeristy of Michigan</h4>
+              <h5>Summer 2022</h5>
+              <p><em>Coursera Course</em></p>
+              <ul>
+                <i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
+                  <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) 
+                    and Intro to Data Science in Python</span></li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4>Harvard Student Agencies</h4>
+              <h5>December 2021 - July 2022</h5>
+              <p><em>Web & Sales Manager</em></p>
+              <ul>
+                <li>Oversaw Brochure Advertisement project through promoting to local businesses; 
+                  individually closed 5 contracts with sponsors and conducted highest annual advertisement revenue of $75K.</li>
+                <li>Researched tourism market trends and story branding technique to promote new product catalog online.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Experience cont.</h3>
+            <div class="resume-item">
+              <h4>CS50 : Intro to CS</h4>
+              <h5>August 2022 - Present</h5>
+              <p><em>Course Assistant </em></p>
+              <ul>
+                <li>Lead weekly sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Smart Women Securities</h4>
+              <h5>August 2022 - Present</h5>
+              <p><em>Investment Board Analyst</em></p>
+              <ul>
+                <li>Manage selling and buying of a $45K investment portfolio across tech, 
+                  healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Women in Computer Science</h4>
+              <h5>December 2021 - Present</h5>
+              <p><em>FGLI (First Generation Low Income) Director (June 2022 - Present)</em></p>
+              <ul>
+                <li>Increase peer academic support for students with little STEM and/or CS 
+                  background through collaboration with other Harvard student advocacy groups.</li>
+              </ul>
+              <p><em>Assistant Outreach Director (December 2021 - May 2022)</em></p>
+              <ul>
+                <li>Organized two in-person workshops to promote CS and STEM awareness at local underfunded high 
+                  schools and one virtual two-day workshop with over 300 students attended globally.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Sammi Zhu</h3>
+      <p>Please feel free to reach out if you have any questions or inquries about my projects!</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
+        <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
