--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
+
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
+        <style>
+          h4, h5 {display:inline;}
+      </style>
         <div class="section-title">
           <h2>Get To Know Me</h2>
         </div>
@@ -87,8 +90,9 @@
               passionate about making CS accessible for every student! As a First Generation
               Low Income student and CS enthusiast, I have seen the barriers FGLI students
               face when it comes to learning CS, as well as the fun and joy that comes from learning 
-              CS (check out some of my projects below!) </h4>
+              CS</h4>  <h5>(check out some of my projects below!)</h5> 
             <br> 
+            <br>
             <h4>
               When I'm not working on projects or coding, I love to scrapbook and play badmintion!
               I am also a linguaphile but most of the times you'll probably find me gushing over how 
