--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Click on any of the images to learn more! Codes for projects and articles for researches are all 
+            linked in the pages. For coding projects, the code can be found on my Github page as well :)
+          </p>
         </div>
 
         <div class="row">
