--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Sammi Zhu</h1>
-      <p>I'm <span class="typed" data-typed-items="a Harvard student, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
+      <h1>Hi! I'm Sammi Zhu</h1>
+      <p>I am <span class="typed" data-typed-items="a Harvard student, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -206,7 +206,7 @@
                   <i class="bi bi-headset"></i>
                   <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
                   <p>National Awards</p>
-                  <h5>linkedin.com/in/sammi-zhu/details/honors/"</h5>
+                  <h5>linkedin.com/in/sammi-zhu/details/honors/</h5>
                 </div>
               </div>
     
@@ -314,7 +314,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Sammi Zhu</h3>
-      <p>Please feel free to reach out if you have any questions or inquries about my projects!</p>
+      <p> Header & Footer Image Credits to @cajitadecrayolas and @alya popova (Pinterest) respectively</p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -327,6 +327,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
+
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
