--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Hi! I'm Sammi Zhu</h1>
-      <p>I am <span class="typed" data-typed-items="a Harvard student, a CS enthusiast, passionate about making CS accessible for everyone \^_^/"></span></p>
+      <h1>Hi! I'm Sammi,</h1>
+      <p>a <span class="typed" data-typed-items="Harvard student, CS enthusiast, firm believer of making CS accessible for everyone \^_^/"></span></p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -128,12 +128,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
+              <image src="/assets/img/portfolio/Sleeps50.gif" alt="" width="375px">
               <div class="portfolio-info">
-                <h4>App 1</h4>
+                <h4>Sleeps50</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="/assets/img/portfolio/Sleeps50-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -142,12 +142,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
+              <image src="/assets/img/portfolio/Tiktok_Research.gif" alt="" width="375px">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Tiktok Research</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="/assets/img/portfolio/Tiktok_Research-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -156,12 +156,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
+              <image src="/assets/img/portfolio/Pepppina-gogy.gif" alt="" width="375px">
               <div class="portfolio-info">
-                <h4>App 2</h4>
+                <h4>Pepppina-gogy : Study Aid</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="/assets/img/portfolio/Pepppina-gogy-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
