--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Systems</p>
-                  <h5>Visual Studio; Chrome Extension Developer; and Figma</h5>
+                  <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
+                  <p>Programs</p>
+                  <h5>Visual Studio; Chrome Extension Developer; GitHub and Figma</h5>
                 </div>
               </div>
     
@@ -230,8 +230,9 @@
 
         <div class="section-title">
           <h2>Resume</h2> 
+          <p>For a copy of my full resume, please feel free to message me on LinkedIn!</p>
         </div>
-
+        
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
