--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <h4>Sleeps50</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Sleeps50-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="/assets/img/portfolio/Sleeps50-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sleeps50"><i class="bx bx-plus"></i></a>
+                  <a href="/Sleeps50-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -147,8 +147,8 @@
                 <h4>Tiktok Research</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Tiktok_Research-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="/assets/img/portfolio/Tiktok_Research-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="TikTok Research"><i class="bx bx-plus"></i></a>
+                  <a href="/TikTok_Research-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -161,8 +161,8 @@
                 <h4>Pepppina-gogy : Study Aid</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Pepppina-gogy-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="/assets/img/portfolio/Pepppina-gogy-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
+                  <a href="/Study_Aid-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
