tiktok details not finished

--- a/TikTok_Research-details.html
+++ b/TikTok_Research-details.html
@@ -70,16 +70,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: UIUX Research</li>
+                <li><strong>Languages</strong>: UIUX, Figma Prototyping</li>
+                <li><strong>Project date</strong>: Feb - July 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://medium.com/@DPDHarvard/fighting-misinformation-one-catfish-at-a-time-ab90d78f3ba2"> See Article</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>TFighting Misinformation: One Catfish at a Time</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                As one of the most frequently used social media platform in the world, how often do users stop to
+                think about the consequences that they can face from mindlessly scrolling through hours on TikTok? 
+                Through this research project, our team explored how s
               </p>
             </div>
           </div>
