--- a/TikTok_Research-details.html
+++ b/TikTok_Research-details.html
@@ -73,7 +73,7 @@
                 <li><strong>Category</strong>: UIUX Research</li>
                 <li><strong>Languages</strong>: UIUX, Figma Prototyping</li>
                 <li><strong>Project date</strong>: Feb - July 2022</li>
-                <li><strong>Project URL</strong>: <a href="https://medium.com/@DPDHarvard/fighting-misinformation-one-catfish-at-a-time-ab90d78f3ba2"> See Article</a></li>
+                <li><strong>Project URL</strong>: <a href=https://medium.com/@DPDHarvard/fighting-misinformation-one-catfish-at-a-time-ab90d78f3ba2> See Article</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -81,7 +81,9 @@
               <p>
                 As one of the most frequently used social media platform in the world, how often do users stop to
                 think about the consequences that they can face from mindlessly scrolling through hours on TikTok? 
-                Through this research project, our team explored how s
+                Through this research project, our team explored ways to incoporate UIUX design to create a more 
+                alerting feature so that users may be aware about any potiential misleading facts before having the
+                choice to continue watching the video or not. 
               </p>
             </div>
           </div>
