updated project details

--- a/Study_Aid-details.html
+++ b/Study_Aid-details.html
@@ -70,16 +70,20 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Chrome Extension </li>
+                <li><strong>Languages</strong>: JavaScript, HTML, CSS</li>
+                <li><strong>Project date</strong>: May - Aug 2022</li>
+                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Chrome-Extension>See Github</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Study better with Pepppina!</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Pepppina-gogy: Study Aid is an extension meant to help students study and prepare 
+                for exams better. It's main functionalities are the 4 settings that it has. You 
+                can use this extension to record your goals before each study session, track the 
+                time that you have been studying for, do quick calculations, and enable dark mode 
+                to protect your eyes.
               </p>
             </div>
           </div>
