--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>a <span class="typed" data-typed-items="Harvard student, CS enthusiast, firm believer of making CS accessible for everyone \^_^/"></span></p>
       <div class="social-links">
         <a href=https://github.com/sammizhu class="github"><i class="bx bxl-github"></i></a>
-        <a href=www.linkedin.com/in/sammi-zhu class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href=https://www.linkedin.com/in/sammi-zhu class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
