--- a/Study_Aid-details.html
+++ b/Study_Aid-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Portfolio Details - Study Aid</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -73,7 +73,9 @@
                 <li><strong>Category</strong>: Chrome Extension </li>
                 <li><strong>Languages</strong>: JavaScript, HTML, CSS</li>
                 <li><strong>Project date</strong>: May - Aug 2022</li>
-                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Chrome-Extension>See Github</a></li>
+                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Chrome-Extension>See Github </a></li>
+                <li><strong>Chrome Store Link</strong>: <a href=https://chrome.google.com/webstore/detail/study-aid/knhfbolnlplfpiohobmeckgcddpfinck>Download Here</a></li>
+                
               </ul>
             </div>
             <div class="portfolio-description">
