--- a/Sleeps50-details.html
+++ b/Sleeps50-details.html
@@ -46,8 +46,11 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <!-- insert video -->
+            <video  width="600" height="500" controls>
+              <source src="/assets/img/portfolio/Sleeps50-Tutorial.mp4" type="video/mp4">
+            </video>
           </div>
+
 
           <div class="col-lg-4">
             <div class="portfolio-info">
