sleeps50 video link

--- a/Sleeps50-details.html
+++ b/Sleeps50-details.html
@@ -46,9 +46,10 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <video  width="600" height="500" controls>
-              <source src="/assets/img/portfolio/Sleeps50-Tutorial.mp4" type="video/mp4">
-            </video>
+            <iframe width="600" height="500" src="https://www.youtube.com/embed/ePRU-AdPu44" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
           </div>
 
 
