--- a/Sleeps50-details.html
+++ b/Sleeps50-details.html
@@ -60,7 +60,7 @@
                 <li><strong>Category</strong>: Web Application </li>
                 <li><strong>Languages</strong>: Python Flask, HTML, CSS, Javascript</li>
                 <li><strong>Project date</strong>: Nov - Dec 2021</li>
-                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Sleeps50> See GitHub</a></li>
+                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Sleeps50 target="_blank"> See GitHub</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
