--- a/Study_Aid-details.html
+++ b/Study_Aid-details.html
@@ -73,8 +73,8 @@
                 <li><strong>Category</strong>: Chrome Extension </li>
                 <li><strong>Languages</strong>: JavaScript, HTML, CSS</li>
                 <li><strong>Project date</strong>: May - Aug 2022</li>
-                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Chrome-Extension>See Github </a></li>
-                <li><strong>Chrome Store Link</strong>: <a href=https://chrome.google.com/webstore/detail/study-aid/knhfbolnlplfpiohobmeckgcddpfinck>Download Here</a></li>
+                <li><strong>Project URL</strong>: <a href=https://github.com/sammizhu/Chrome-Extension target="_blank">See Github </a></li>
+                <li><strong>Chrome Store Link</strong>: <a href=https://chrome.google.com/webstore/detail/study-aid/knhfbolnlplfpiohobmeckgcddpfinck target="_blank">Download Here</a></li>
                 
               </ul>
             </div>
