--- a/TikTok_Research-details.html
+++ b/TikTok_Research-details.html
@@ -73,7 +73,7 @@
                 <li><strong>Category</strong>: UIUX Research</li>
                 <li><strong>Languages</strong>: UIUX, Figma Prototyping</li>
                 <li><strong>Project date</strong>: Feb - July 2022</li>
-                <li><strong>Project URL</strong>: <a href=https://medium.com/@DPDHarvard/fighting-misinformation-one-catfish-at-a-time-ab90d78f3ba2> See Article</a></li>
+                <li><strong>Project URL</strong>: <a href=https://medium.com/@DPDHarvard/fighting-misinformation-one-catfish-at-a-time-ab90d78f3ba2 target="_blank"> See Article</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
