new studyaid photos

--- a/Study_Aid-details.html
+++ b/Study_Aid-details.html
@@ -50,15 +50,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="/assets/img/portfolio/Study_Aid1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="/assets/img/portfolio/Study_Aid2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="/assets/img/portfolio/Study_Aid3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="/assets/img/portfolio/Study_Aid4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="/assets/img/portfolio/Study_Aid5.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="/assets/img/portfolio/Study_Aid6.png" alt="">
                 </div>
 
               </div>
