--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <br> 
             <br>
             <h4>
-              When I'm not working on projects or coding, I love to scrapbook and play badmintion!
+              When I'm not working on projects or coding, I love to scrapbook and play badminton!
               I am also a linguaphile but most of the times you'll probably find me gushing over how 
               cute my rabbit, Tofu, is! </h4>
           </div>
