--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <div class="section-title">
           <h2>Resume</h2> 
-          <p>For a copy of my full resume, please feel free to message me on LinkedIn!</p>
+          <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1u7ff51wYAS5I950pT8GGETcWewfE5_Rq/view?usp=sharing">here</a>.</p>
         </div>
         
         <div class="row">
@@ -239,12 +239,12 @@
             <div class="resume-item">
               <h4>Harvard University. Cambridge, MA</h4>
               <h6>2021 - 2025</h6>
-              <p><em>A.B. Candidate in Computer Science w/ Secondary in Statistics</em></p>
+              <p><em>A.B. Candidate in Computer Science - Honors Track</em></p>
               <ul>
                 <i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
-                      <span>Discrete Mathematics for Computer Science, Calculus II, Calculus I, and Introduction to Computer Science (CS50)</span></br>
+                      <span>Discrete Mathematics for Computer Science, Calculus I, Calculus II, and Introduction to Computer Science (CS50)</span></br>
                 <i class="bi bi-chevron-right"></i> <strong>Present Courses: </strong> 
-                      <span>Intro to Probability, Applied Math: Solving and Optimizing, 
+                      <span>Intro to Probability, Introduction to CS and Programming using Python
                         and Intro to Algorithms and their Limitations</span>
               </ul>
             </div>
@@ -258,7 +258,16 @@
                     and Intro to Data Science in Python</span></li>
               </ul>
             </div>
-            <h3 class="resume-title">Experience</h3>
+            <h3 class="resume-title">Work Experience</h3>
+            <div class="resume-item">
+              <h4>CS50 : Intro to CS</h4>
+              <h6>August 2022 - Present</h6>
+              <p><em>Course Assistant </em></p>
+              <ul>
+                <li>Lead weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
+                <li>Host weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Harvard Student Agencies</h4>
               <h6>December 2021 - July 2022</h6>
@@ -271,24 +280,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Experience cont.</h3>
-            <div class="resume-item">
-              <h4>CS50 : Intro to CS</h4>
-              <h6>August 2022 - Present</h6>
-              <p><em>Course Assistant </em></p>
-              <ul>
-                <li>Lead weekly sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Smart Women Securities</h4>
-              <h6>August 2022 - Present</h6>
-              <p><em>Investment Board Analyst</em></p>
-              <ul>
-                <li>Manage selling and buying of a $45K investment portfolio across tech, 
-                  healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
-              </ul>
-            </div>
+            <h3 class="resume-title">Extra-curriculars</h3>
             <div class="resume-item">
               <h4>Women in Computer Science</h4>
               <h6>December 2021 - Present</h6>
@@ -303,6 +295,31 @@
                   schools and one virtual two-day workshop with over 300 students attended globally.</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Smart Women Securities</h4>
+              <h6>August 2022 - Present</h6>
+              <p><em>Chief Technology Officer (September 2022 - Present)</em></p>
+              <ul>
+                <li>Manage organization's website by frequently updating website with new events and alumni updates. </li>
+                <li>Redesigned website's functionality to boost general membership involvement.</li>
+              </ul>
+              <p><em>Investment Board Analyst (Aug 2022 - Present)</em></p>
+              <ul>
+                <li>Coordinate selling and buying of a $45K investment portfolio across tech, 
+                  healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Harvard College in Asia Program</h4>
+              <h6>August 2022 - Present</h6>
+              <p><em>Operations Team Member</em></p>
+              <ul>
+                <li>Plan meal logistic for Harvard's premier organization for US-Asia academic, cultural, and social exchange via outreaching
+                  to establish sponsorships with local businesses.
+                </li>
+              </ul>
+            </div>
+          </div>
           </div>
         </div>
 
