--- a/index.html
+++ b/index.html
@@ -50,27 +50,51 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experiences</span></a></li>
       </ul>
-    </nav><!-- .nav-menu -->
+    </nav>
+    <!-- .nav-menu -->
 
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center">
+  <!-- <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Hi! I'm Sammi,</h1>
-      <p>a <span class="typed" data-typed-items="Harvard student, CS enthusiast, firm believer of making CS accessible for everyone \^_^/"></span></p>
+      <div class="image">
+        <img src="assets/img/profile-img.jpg" style="max-width:325px; border-radius:10px;">
+      </div>
+      <p>Hello World, I'm</p>
+      <br>
+      <h1><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
       <div class="social-links">
         <a href=https://github.com/sammizhu class="github"><i class="bx bxl-github"></i></a>
         <a href=https://www.linkedin.com/in/sammi-zhu class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
-  </section><!-- End Hero -->
+  </section>End Hero -->
+  <section id ="hero" class="hero-home py-5">
+    <div class="container pt-5">
+      <div class="row" style="display:flex;flex-direction:column;margin:auto;justify-content:center;height:90vh;">
+        <div class="col-lg-7 mx-auto text-center">
+          <div><img src="assets/img/profile-img.jpg" style="max-width:300px; border-radius:10px;"></div>
+          <br>
+          <p class="mb-5" style="font-family: 'Poppins', sans-serif; font-size:26px; color: #45505b;">Hello World, I'm</p>
+          <h1 style="color: #ABC4FF; font-size: 70px; line-height: 26px; font-weight: 700; "><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
+        </div>
+        <br>
+        <div class="social-links">
+          <a href=https://github.com/sammizhu class="github"><i class="bx bxl-github"></i></a>
+          <a href=https://www.linkedin.com/in/sammi-zhu class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <main id="main">
 
     <!-- ======= About Section ======= -->
 
     <section id="about" class="about">
+
       <div class="container" data-aos="fade-up">
         <style>
           h4, h5 {display:inline;}
@@ -331,8 +355,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Sammi Zhu</h3>
-      <p> Header & Footer Image Credits to @cajitadecrayolas and @alya popova (Pinterest) respectively</p>
+      <p> If you have any questions, feel free to connect! </p>
       <div class="social-links">
         <a href="https://github.com/sammizhu" class="github"><i class="bx bxl-github"></i></a>
         <a href="www.linkedin.com/in/sammi-zhu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
