--- a/index.html
+++ b/index.html
@@ -239,14 +239,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2> 
+          <h2>Experience</h2> 
           <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1u7ff51wYAS5I950pT8GGETcWewfE5_Rq/view?usp=sharing">here</a>.</p>
         </div>
         
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
+            <!-- <h3 class="resume-title">Education</h3> -->
+            <!-- <div class="resume-item">
               <h4>Harvard University. Cambridge, MA</h4>
               <h6>2021 - 2025</h6>
               <p><em>A.B. Candidate in Computer Science - Honors Track</em></p>
@@ -257,8 +257,8 @@
                       <span>Intro to Probability, Introduction to CS and Programming using Python
                         and Intro to Algorithms and their Limitations</span>
               </ul>
-            </div>
-            <div class="resume-item">
+            </div> -->
+            <!-- <div class="resume-item">
               <h4>Univeristy of Michigan</h4>
               <h6>Summer 2022</h6>
               <p><em>Coursera Course</em></p>
@@ -267,15 +267,33 @@
                   <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) 
                     and Intro to Data Science in Python</span></li>
               </ul>
-            </div>
+            </div> -->
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
+              <h4>General Motors</h4>
+              <h6>May - August 2023</h6>
+              <p><em>Incoming SWE Intern </em></p>
+              <ul>
+                <!-- <li>Lead weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
+                <li>Host weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li> -->
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>CS32 : Computational Thinking and Problem Solving</h4>
+              <h6>Springs Semester 2023</h6>
+              <p><em>Teaching Fellow </em></p>
+              <ul>
+                <li>Hold 2 hours of student-facing officing hours and sections weekly to reinforce students' understanding of class materials</li>
+                <li>Help foster an environment for over 110 students to feel welcome and encouraged to learn computer science </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>CS50 : Intro to CS</h4>
-              <h6>August 2022 - Present</h6>
+              <h6>Fall Semester 2022</h6>
               <p><em>Course Assistant </em></p>
               <ul>
-                <li>Lead weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
-                <li>Host weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li>
+                <li>Led weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
+                <li>Hosted weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li>
               </ul>
             </div>
             <div class="resume-item">
