updates again yubh

--- a/index.html
+++ b/index.html
@@ -239,35 +239,12 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Experience</h2> 
+          <h2>Resume</h2> 
           <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1u7ff51wYAS5I950pT8GGETcWewfE5_Rq/view?usp=sharing">here</a>.</p>
         </div>
         
         <div class="row">
           <div class="col-lg-6">
-            <!-- <h3 class="resume-title">Education</h3> -->
-            <!-- <div class="resume-item">
-              <h4>Harvard University. Cambridge, MA</h4>
-              <h6>2021 - 2025</h6>
-              <p><em>A.B. Candidate in Computer Science - Honors Track</em></p>
-              <ul>
-                <i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
-                      <span>Discrete Mathematics for Computer Science, Calculus I, Calculus II, and Introduction to Computer Science (CS50)</span></br>
-                <i class="bi bi-chevron-right"></i> <strong>Present Courses: </strong> 
-                      <span>Intro to Probability, Introduction to CS and Programming using Python
-                        and Intro to Algorithms and their Limitations</span>
-              </ul>
-            </div> -->
-            <!-- <div class="resume-item">
-              <h4>Univeristy of Michigan</h4>
-              <h6>Summer 2022</h6>
-              <p><em>Coursera Course</em></p>
-              <ul>
-                <i class="bi bi-chevron-right"></i> <strong>Relevant Courses: </strong> 
-                  <span>Python for Everybody Specialization (Data Structures, Web Data, Databases) 
-                    and Intro to Data Science in Python</span></li>
-              </ul>
-            </div> -->
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
               <h4>General Motors</h4>
