--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sammi Zhu</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <!-- <meta content="" name="description">
+  <meta content="" name="keywords"> -->
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Sammi Zhu">
+  <meta name="description" content="I'm a Harvard sophomore passionate about accessible CS with experiences in research, medical enginnering, and fintech .">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -63,7 +66,7 @@
           <div><img src="assets/img/profile-img.jpg" style="max-width:300px; border-radius:10px;"></div>
           <br>
           <p class="mb-5" style="font-family: 'Poppins', sans-serif; font-size:26px; color: #45505b;">Hello World, I'm</p>
-          <h1 style="color: #ABC4FF; font-size: 70px; line-height: 26px; font-weight: 700; "><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
+          <h1 style="color: #ABC4FF; font-size: 70px; line-height: 55px; font-weight: 700;"><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
         </div>
         <br>
         <div class="social-links">
