--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <image src="/assets/img/portfolio/Sleeps50.gif" alt="" width="375px">
+              <image src="/assets/img/portfolio/Sleeps50.gif" alt="" width="100%">
               <div class="portfolio-info">
                 <h4>Sleeps50</h4>
-                <p>App</p>
+                <p>Webapp</p>
                 <div class="portfolio-links">
                   <a href="/assets/img/portfolio/Sleeps50-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sleeps50"><i class="bx bx-plus"></i></a>
                   <a href="/Sleeps50-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -155,12 +155,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
-              <image src="/assets/img/portfolio/Tiktok_Research.gif" alt="" width="375px">
+              <image src="/assets/img/portfolio/Tiktok_Research.gif" alt="" width="100%">
               <div class="portfolio-info">
                 <h4>Tiktok Research</h4>
-                <p>Web</p>
+                <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Tiktok_Research-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="TikTok Research"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="/assets/img/portfolio/Tiktok_Research-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="TikTok Research"><i class="bx bx-plus"></i></a> -->
+                  <a href="/assets/img/portfolio/Tiktok_Research-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="TikTok Research"><i class="bx bx-plus"></i></a>
                   <a href="/TikTok_Research-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -169,12 +170,26 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <image src="/assets/img/portfolio/Pepppina-gogy.gif" alt="" width="375px">
+              <image src="/assets/img/portfolio/Pepppina-gogy.gif" alt="" width="100%">
               <div class="portfolio-info">
                 <h4>Pepppina-gogy : Study Aid</h4>
-                <p>App</p>
+                <p>Chrome Extension</p>
                 <div class="portfolio-links">
                   <a href="/assets/img/portfolio/Pepppina-gogy-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
+                  <a href="/Study_Aid-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+            <div class="portfolio-wrap">
+              <image src="/assets/img/portfolio/Personal-Website.gif" alt="" width="100%">
+              <div class="portfolio-info">
+                <h4>Personal Website</h4>
+                <p>Website</p>
+                <div class="portfolio-links">
+                  <a href="/assets/img/portfolio/Personal-Website.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
                   <a href="/Study_Aid-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
