--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h4>Sleeps50</h4>
                 <p>Webapp</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Sleeps50-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sleeps50"><i class="bx bx-plus"></i></a>
+                  <a href="/assets/img/portfolio/Sleeps50-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sleeps50"><i class="bx bx-plus"></i></a>
                   <a href="/Sleeps50-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -175,7 +175,7 @@
                 <h4>Pepppina-gogy : Study Aid</h4>
                 <p>Chrome Extension</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Pepppina-gogy-2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
+                  <a href="/assets/img/portfolio/Pepppina-gogy-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
                   <a href="/Study_Aid-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -189,8 +189,8 @@
                 <h4>Personal Website</h4>
                 <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="/assets/img/portfolio/Personal-Website.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pepppina-gogy : Study Aid"><i class="bx bx-plus"></i></a>
-                  <a href="/Study_Aid-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="/assets/img/portfolio/Personal-Website.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Personal Website: Designed and Created by Sammi"><i class="bx bx-plus"></i></a>
+                  <a href="/Personal-Website.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
