--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
               <h6>Springs Semester 2023</h6>
               <p><em>Teaching Fellow </em></p>
               <ul>
-                <li>Hold 2 hours of student-facing officing hours and sections weekly to reinforce students' understanding of class materials</li>
-                <li>Help foster an environment for over 110 students to feel welcome and encouraged to learn computer science </li>
+                <li>Hold 2 hours of weekly student-facing office hours and sections to reinforce students' understanding of in-class materials</li>
+                <li>Help foster a welcoming environment for over 110 students and encourage students to pursue computer science </li>
               </ul>
             </div>
             <div class="resume-item">
